--- a/eoffice_korem/src/main/res/layout/activity_tambah_surat_masuk.xml
+++ b/eoffice_korem/src/main/res/layout/activity_tambah_surat_masuk.xml
@@ -27,14 +27,15 @@
             android:minHeight="48dp"
             android:src="@drawable/ic_back"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="?attr/colorOnBackground" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:text="@string/tambah_surat_masuk"
-            android:textColor="@color/black"
+            android:textColor="?attr/colorOnBackground"
             android:textSize="18sp" />
 
     </LinearLayout>
@@ -60,18 +61,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:spinnerMode="dropdown"
-                app:smsp_arrowColor="@color/primaryColor"
+                app:smsp_arrowColor="?attr/colorPrimary"
                 app:smsp_hint="Pilih Penerima Surat"
-                app:smsp_hintColor="@color/primaryColor"
+                app:smsp_hintColor="?attr/colorPrimary"
                 app:smsp_isOutlined="true"
-                app:smsp_itemColor="@color/black"
-                app:smsp_itemListColor="@color/black"
-                app:smsp_itemListHintBackgroundColor="#808080"
-                app:smsp_itemListHintColor="#FFFFFF"
+                app:smsp_itemColor="?attr/colorOnBackground"
+                app:smsp_itemListColor="?attr/colorOnBackground"
+                app:smsp_itemListHintBackgroundColor="?attr/colorPrimary"
+                app:smsp_itemListHintColor="?attr/colorPrimary"
                 app:smsp_multilineError="false"
-                app:smsp_outlinedBoxColor="@color/primaryColor"
+                app:smsp_outlinedBoxColor="?attr/colorPrimary"
                 app:smsp_outlinedBoxRadius="4dp"
-                app:smsp_selectedItemListColor="@color/primaryDarkColor" />
+                app:smsp_selectedItemListColor="?attr/colorPrimary" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -90,18 +91,18 @@
                     android:layout_marginEnd="16dp"
                     android:layout_weight="1"
                     android:spinnerMode="dropdown"
-                    app:smsp_arrowColor="@color/primaryColor"
+                    app:smsp_arrowColor="?attr/colorPrimary"
                     app:smsp_hint="Pilih Jenis Surat"
-                    app:smsp_hintColor="@color/primaryColor"
+                    app:smsp_hintColor="?attr/colorPrimary"
                     app:smsp_isOutlined="true"
-                    app:smsp_itemColor="@color/black"
-                    app:smsp_itemListColor="@color/black"
-                    app:smsp_itemListHintBackgroundColor="#808080"
-                    app:smsp_itemListHintColor="#FFFFFF"
+                    app:smsp_itemColor="?attr/colorOnBackground"
+                    app:smsp_itemListColor="?attr/colorOnBackground"
+                    app:smsp_itemListHintBackgroundColor="?attr/colorPrimary"
+                    app:smsp_itemListHintColor="?attr/colorPrimary"
                     app:smsp_multilineError="false"
-                    app:smsp_outlinedBoxColor="@color/primaryColor"
+                    app:smsp_outlinedBoxColor="?attr/colorPrimary"
                     app:smsp_outlinedBoxRadius="4dp"
-                    app:smsp_selectedItemListColor="@color/primaryDarkColor" />
+                    app:smsp_selectedItemListColor="?attr/colorPrimary" />
 
                 <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
                     android:id="@+id/perihal_spinner"
@@ -109,18 +110,18 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:spinnerMode="dropdown"
-                    app:smsp_arrowColor="@color/primaryColor"
+                    app:smsp_arrowColor="?attr/colorPrimary"
                     app:smsp_hint="Pilih Perihal Surat"
-                    app:smsp_hintColor="@color/primaryColor"
+                    app:smsp_hintColor="?attr/colorPrimary"
                     app:smsp_isOutlined="true"
-                    app:smsp_itemColor="@color/black"
-                    app:smsp_itemListColor="@color/black"
-                    app:smsp_itemListHintBackgroundColor="#808080"
-                    app:smsp_itemListHintColor="#FFFFFF"
+                    app:smsp_itemColor="?attr/colorOnBackground"
+                    app:smsp_itemListColor="?attr/colorOnBackground"
+                    app:smsp_itemListHintBackgroundColor="?attr/colorPrimary"
+                    app:smsp_itemListHintColor="?attr/colorPrimary"
                     app:smsp_multilineError="false"
-                    app:smsp_outlinedBoxColor="@color/primaryColor"
+                    app:smsp_outlinedBoxColor="?attr/colorPrimary"
                     app:smsp_outlinedBoxRadius="4dp"
-                    app:smsp_selectedItemListColor="@color/primaryDarkColor" />
+                    app:smsp_selectedItemListColor="?attr/colorPrimary" />
 
             </LinearLayout>
 
@@ -138,7 +139,6 @@
                     android:id="@+id/sm_sumber_surat_next_input"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:backgroundTint="@color/white"
                     android:hint="@string/sm_surat_next_input"
                     android:inputType="textEmailAddress" />
 
@@ -158,7 +158,6 @@
                     android:id="@+id/sm_pengirim_input"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:backgroundTint="@color/white"
                     android:hint="@string/sm_pengirim_input"
                     android:inputType="textEmailAddress" />
 
@@ -166,13 +165,12 @@
 
             <Button
                 android:id="@+id/btn_surat_masuk_foto"
-                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="match_parent"
-                android:layout_height="64dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="14dp"
-                android:backgroundTint="@color/secondaryColor"
-                android:text="@string/tambah_foto"
-                android:textColor="@color/white" />
+                android:text="@string/tambah_files"
+                android:textAppearance="?attr/textAppearanceButton"
+                android:textColor="?attr/colorOnPrimary" />
 
             <LinearLayout
                 android:id="@+id/ll_selected_files"
@@ -186,10 +184,12 @@
             <Button
                 android:id="@+id/btn_tanggal_surat"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:text="@string/sm_tgl_view"
                 android:textAllCaps="false"
+                android:textAppearance="?attr/textAppearanceButton"
+                android:textColor="?attr/colorOnPrimary"
                 android:textSize="16sp" />
 
             <TextView
@@ -197,7 +197,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="@string/tgl_sm"
                 android:textColor="@color/black"
                 android:textSize="18sp" />
 
@@ -207,16 +206,15 @@
                 android:layout_height="60dp"
                 android:layout_marginTop="32dp"
                 app:p_arrowVisible="false"
-                app:p_backgroundTint="@color/primaryColor"
-                app:p_bgColor="@color/colorSecondary"
+                app:p_backgroundTint="?attr/colorTertiary"
                 app:p_cornerRadius="5dp"
                 app:p_layoutDirection="ltr"
-                app:p_progressBGColor="@color/primaryColor"
-                app:p_progressColor="@color/primaryLightColor"
-                app:p_rippleColor="@color/primaryLightColor"
+                app:p_progressBGColor="?attr/colorTertiary"
+                app:p_progressColor="?attr/colorTertiary"
+                app:p_rippleColor="?attr/colorTertiary"
                 app:p_style="circleBar"
                 app:p_text="Tambahkan Surat Masuk"
-                app:p_textColor="@color/white"
+                app:p_textColor="?attr/colorOnTertiary"
                 app:p_textSize="18sp" />
 
         </LinearLayout>
