--- a/eoffice_korem/src/main/res/layout/activity_splash_screen.xml
+++ b/eoffice_korem/src/main/res/layout/activity_splash_screen.xml
@@ -59,7 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            app:SpinKit_Color="@color/secondaryLightColor"
+            app:SpinKit_Color="?attr/colorTertiary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
