--- a/eoffice_korem/src/main/res/layout/bottom_sheet_disposisi_balasan.xml
+++ b/eoffice_korem/src/main/res/layout/bottom_sheet_disposisi_balasan.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:backgroundTint="?attr/colorSecondaryContainer"
     app:cardCornerRadius="8dp"
     app:elevation="8dp">
 
@@ -17,7 +17,7 @@
             android:layout_width="100dp"
             android:layout_height="5dp"
             android:background="@drawable/rounded_box"
-            android:backgroundTint="@color/md_grey_400"
+            android:backgroundTint="?attr/colorOnSecondaryContainer"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -38,7 +38,6 @@
                 android:id="@+id/input_disposisi_balasan"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:backgroundTint="@color/white"
                 android:hint="@string/balasan"
                 android:inputType="text" />
 
@@ -51,18 +50,16 @@
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/input_balasan"
             app:p_arrowVisible="false"
-            app:p_backgroundTint="@color/primaryColor"
-            app:p_bgColor="@color/colorSecondary"
+            app:p_backgroundTint="?attr/colorTertiary"
             app:p_cornerRadius="5dp"
             app:p_layoutDirection="ltr"
-            app:p_progressBGColor="@color/primaryColor"
-            app:p_progressColor="@color/primaryLightColor"
-            app:p_rippleColor="@color/primaryLightColor"
+            app:p_progressBGColor="?attr/colorTertiary"
+            app:p_progressColor="?attr/colorTertiary"
+            app:p_rippleColor="?attr/colorTertiary"
             app:p_style="circleBar"
             app:p_text="Kirim Balasan"
-            app:p_textColor="@color/white"
-            app:p_textSize="18sp"
-            tools:layout_editor_absoluteX="16dp" />
+            app:p_textColor="?attr/colorOnTertiary"
+            app:p_textSize="18sp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
