--- a/eoffice_korem/src/main/res/layout/bottom_sheet_gambar_surat.xml
+++ b/eoffice_korem/src/main/res/layout/bottom_sheet_gambar_surat.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="?attr/colorSecondaryContainer"
     app:cardCornerRadius="8dp"
     app:elevation="8dp">
 
@@ -17,7 +18,7 @@
             android:layout_width="100dp"
             android:layout_height="5dp"
             android:background="@drawable/rounded_box"
-            android:backgroundTint="@color/md_grey_400"
+            android:backgroundTint="?attr/colorOnSecondaryContainer"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -42,16 +43,17 @@
             android:id="@+id/btn_close"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/rounded_box"
-            android:backgroundTint="@color/md_grey_300"
             android:layout_marginBottom="20dp"
+            android:background="@drawable/rounded_box"
+            android:backgroundTint="?attr/colorTertiaryContainer"
+            android:contentDescription="@string/close"
             android:minWidth="48dp"
             android:minHeight="48dp"
             android:src="@drawable/ic_close"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:contentDescription="@string/close" />
+            app:tint="?attr/colorOnTertiaryContainer" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
