--- a/eoffice_korem/src/main/res/layout/bottom_sheet_riwayat_disposisi.xml
+++ b/eoffice_korem/src/main/res/layout/bottom_sheet_riwayat_disposisi.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:backgroundTint="?attr/colorSecondaryContainer"
     app:cardCornerRadius="8dp"
     app:elevation="8dp">
 
@@ -17,7 +18,7 @@
             android:layout_width="100dp"
             android:layout_height="5dp"
             android:background="@drawable/rounded_box"
-            android:backgroundTint="@color/md_grey_400"
+            android:backgroundTint="?attr/colorOnSecondaryContainer"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -43,7 +44,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-black"
                     android:text="@string/riwayat_disposisi"
-                    android:textColor="@color/black"
+                    android:textColor="?attr/colorOnSecondaryContainer"
                     android:textSize="16sp" />
 
             </LinearLayout>
