--- a/eoffice_korem/src/main/res/layout/item_notifikasi.xml
+++ b/eoffice_korem/src/main/res/layout/item_notifikasi.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_marginVertical="6dp"
     android:foreground="?android:attr/selectableItemBackground"
-    app:cardBackgroundColor="@color/md_grey_200"
+    app:cardBackgroundColor="?attr/colorSecondaryContainer"
     app:cardCornerRadius="8dp"
     app:elevation="8dp">
 
@@ -20,9 +20,8 @@
             android:id="@+id/tv_judul"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="sans-serif"
-            android:text=""
-            android:textColor="@color/black"
+            android:fontFamily="sans-serif-black"
+            android:textColor="?attr/colorOnSecondaryContainer"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -31,10 +30,8 @@
             android:id="@+id/tv_isi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:fontFamily="sans-serif"
-            android:text=""
-            android:textColor="@color/black"
+            android:layout_marginTop="4dp"
+            android:textColor="?attr/colorOnSecondaryContainer"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_judul" />
@@ -43,10 +40,9 @@
             android:id="@+id/tv_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="8dp"
             android:fontFamily="sans-serif"
-            android:text=""
-            android:textColor="@color/md_grey_700"
+            android:textColor="?attr/colorOnSecondaryContainer"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_isi" />
